@@ -20,7 +20,6 @@ package org.apache.kafka.message;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -42,6 +41,7 @@ public final class MessageSpec {
     private final boolean latestVersionUnstable;
 
     @JsonCreator
+    @SuppressWarnings({"NPathComplexity", "CyclomaticComplexity"})
     public MessageSpec(@JsonProperty("name") String name,
                        @JsonProperty("validVersions") String validVersions,
                        @JsonProperty("deprecatedVersions") String deprecatedVersions,
@@ -57,7 +57,7 @@ public final class MessageSpec {
         this.apiKey = apiKey == null ? Optional.empty() : Optional.of(apiKey);
         this.type = Objects.requireNonNull(type);
         this.commonStructs = commonStructs == null ? Collections.emptyList() :
-                Collections.unmodifiableList(new ArrayList<>(commonStructs));
+                List.copyOf(commonStructs);
         if (flexibleVersions == null) {
             throw new RuntimeException("You must specify a value for flexibleVersions. " +
                     "Please use 0+ for all new messages.");
@@ -81,6 +81,24 @@ public final class MessageSpec {
                 "messages with type `request`");
         }
         this.latestVersionUnstable = latestVersionUnstable;
+
+        if (type == MessageSpecType.COORDINATOR_KEY) {
+            if (this.apiKey.isEmpty()) {
+                throw new RuntimeException("The ApiKey must be set for messages " + name + " with type `coordinator-key`");
+            }
+            if (!this.validVersions().equals(new Versions((short) 0, ((short) 0)))) {
+                throw new RuntimeException("The Versions must be set to `0` for messages " + name + " with type `coordinator-key`");
+            }
+            if (!this.flexibleVersions.empty()) {
+                throw new RuntimeException("The FlexibleVersions are not supported for messages " + name + "  with type `coordinator-key`");
+            }
+        }
+
+        if (type == MessageSpecType.COORDINATOR_VALUE) {
+            if (this.apiKey.isEmpty()) {
+                throw new RuntimeException("The ApiKey must be set for messages with type `coordinator-value`");
+            }
+        }
     }
 
     public StructSpec struct() {
